<resources>
    <string name="app_name">Steampunked</string>

    <string name="install">Install</string>
    <string name="discard">Discard</string>
    <string name="openValve">OpenValve</string>
    <string name="surrender">Surrender</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="login">Login</string>
    <string name="verify">Verify</string>
    <string name="new_user">New User</string>
    <string name="gameNew">New Game</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="remember_me">Remember me</string>
    <string name="playerWin">Winner is: </string>
    <string name="instructions">How To Play</string>
    <string name="newGame">Start a New Game</string>
    <string name="invalid_connection">Invalid Connection</string>
    <string name="quit_game">Quit Game</string>
    <string name="quit_game_confirmation">Are you sure you want to quit the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_turn">Your turn: </string>
    <string name="steampunked_logo">Steampunked logo.</string>
    <string name="winner_name">Winner Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_wait">Please wait...</string>
    <string name="logging_in">Logging in...</string>
    <string name="creating_user">Creating new user...</string>
    <string name="login_fail">Failed to log in</string>
    <string name="login_success">Successfully logged in</string>
    <string name="create_user_fail">Failed to create new user</string>
    <string name="verify_error">Passwords do not match</string>
    <string name="password_length_error">Password must be at least 8 characters</string>
    <string name="create_user_success">Created new user!</string>
    <string name="logout">Logout</string>

    <string name="hold_horses">Hold your horses!</string>
    <string name="waiting_for_p2">Waiting for second player...</string>
    <string name="initializing">Initializing game...</string>
    <string name="init_fail">Failed to join game</string>
    <string name="loading_game">Loading game...</string>
    <string name="loading_fail">Failed to load game, trying again.</string>
    <string name="waiting_for">Waiting for</string>
    <string name="uploading">Uploading game...</string>
    <string name="upload_fail">Failed to upload game, trying again.</string>
</resources>
