<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.msu.becketta.steampunked.GameActivity">

    <Button
        android:layout_height="wrap_content"
        android:text="@string/install"
        android:id="@+id/installButton"
        android:clickable="true"
        android:enabled="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onInstall"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_above="@+id/gameView"
        android:layout_toLeftOf="@+id/discardButton"
        android:layout_toStartOf="@+id/discardButton"
        android:layout_marginRight="111dp"
        android:layout_marginEnd="111dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disard"
        android:id="@+id/discardButton"
        android:onClick="onDiscard"
        android:adjustViewBounds="true"
        android:enabled="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/surrender" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openValve"
        android:id="@+id/openValveButton"
        android:onClick="onOpenValve"
        android:adjustViewBounds="true"
        android:enabled="true"
        android:layout_above="@+id/gameView"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/discardButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surrender"
        android:id="@+id/surrender"
        android:onClick="onSurrender"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:enabled="true"
        android:layout_alignParentTop="true" />

    <edu.msu.becketta.steampunked.GameView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameView"
        android:layout_alignRight="@+id/surrender"
        android:layout_alignEnd="@+id/surrender"
        android:layout_below="@+id/discardButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/currentPlayer"
        android:layout_above="@+id/gameView"
        android:layout_toLeftOf="@+id/installButton"
        android:layout_toStartOf="@+id/installButton"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp" />

</RelativeLayout>
